fixed overlapping issues

--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -15,11 +15,4 @@
             list-style: none;
         }
     }
-
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 70px;
-    
 }
